app/components/views/HomePage/HomePage.module.css
.isRow {
  display: flex;
  flex-direction: row;
}

.overviewHeader {
  padding-left: 63px;
  padding-top: 47px;
  padding-right: 56px;
  flex-flow: column wrap;
  background-color: var(--background-back-color);
}

.overviewContentWrapper {
  justify-content: space-between;
  display: flex;
  background-color: var(--background-back-color);
  padding-left: 63px;
}

.overviewSpendableLockedWrapper {
  padding-top: 132px;
}

.overviewTransactionsTicket {
  padding: 30px 63px;
}

.overviewBalance {
  font-size: 42px;
  color: var(--input-color-default);
  font-family: var(--font-family-monospace);
}

.overviewBalanceLabel {
  font-family: var(--font-family-regular);
  font-size: 11px;
  color: var(--overview-balance-label);
}

.overviewBalanceUnit {
  font-size: 17px;
  color: var(--input-color-default);
}

.overviewBalanceSpendableLocked {
  font-family: var(--font-family-regular);
  line-height: 13px;
  color: var(--input-color-default);
  padding-left: 10px;
  margin-right: 2px;
  background-repeat: no-repeat;
  background-position: 0 50%;
  background-size: 7px;
}

.overviewBalanceSpendableLocked.amount {
  font-size: 17px;
  font-family: var(--font-family-monospace);
  line-height: 18px;
}

.overviewBalanceSpendableLocked.active {
  background-image: var(--legend-active);
}

.overviewBalanceSpendableLocked.voted {
  background-image: var(--legend-voted);
}

.overviewBalanceSpendableLocked.received {
  background-image: var(--legend-received);
}

.overviewBalanceSpendableLocked.sent {
  background-image: var(--legend-sent);
}

.overviewBalanceSpendableLocked.available {
  background-image: var(--legend-available);
}

.overviewBalanceSpendableLocked.locked {
  background-image: var(--legend-locked);
}

.overviewBalanceSpendableLockedLabel {
  font-size: 11px;
  color: var(--agenda-card-bottom-cfg);
  font-family: var(--font-family-regular);
  line-height: 13px;
  margin-left: 10px;
  margin-top: 4px;
}

.overviewSpendableLockedWrapperArea {
  margin-bottom: 14px;
}

.overviewSpendableLockedWrapperArea.tickets {
  margin-bottom: 8px;
}

.tabsContent {
  width: 100%;
}
.tabsWrapper {
  height: 250px;
}

@media screen and (max-width: 1179px) {
  .overviewTransactionsTicket {
    padding: 30px 20px;
  }

  .overviewHeader {
    padding-top: 60px;
    padding-left: 20px;
  }

  .overviewContentWrapper {
    padding-left: 20px;
  }

  .overviewSpendableLockedWrapper {
    padding-top: 114px;
  }
}

@media screen and (max-width: 768px) {
  .overviewTab {
    display: inline-block;
    width: 30px;
    height: 30px;
    background-size: 16px;
    background-position: 50% 50%;
    background-repeat: no-repeat;
  }

  .overviewTab.balance {
    background-image: var(--tab-icon-balance);
  }
  .overviewTab.tickets {
    background-image: var(--tab-icon-tickets);
  }
  .overviewTab.tx {
    background-image: var(--tab-icon-transactions);
  }

  .overviewHeader {
    padding-left: 11px;
    padding-top: 40px;
    padding-right: 0;
  }

  .overviewContentWrapper {
    padding-left: 11px;
    display: flex;
    flex-direction: column-reverse;
  }

  .overviewSpendableLockedWrapper {
    padding-top: 0;
    display: flex;
    justify-content: space-between;
    width: 315px;
    padding-left: 9px;
  }
}

@media screen and (max-width: 768px) {
  .overviewTab {
    display: inline-block;
    width: 30px;
    height: 30px;
    background-size: 16px;
    background-position: 50% 50%;
    background-repeat: no-repeat;
  }

  .balanceIcon {
    color: transparent;
    background-image: var(--tab-icon-balance);
  }

  .ticketsIcon {
    color: transparent;
    background-image: var(--tab-icon-tickets);
  }

  .txIcon {
    color: transparent;
    background-image: var(--tab-icon-transactions);
  }

  .overviewBalance {
    font-size: 27px;
  }
  .overviewBalanceUnit {
    font-size: 13px;
  }

  .overviewContentWrapper {
    padding-left: 11px;
    display: flex;
    flex-direction: column-reverse;
  }

  .overviewTransactionsTicket {
    padding: 20px 10px;
  }
  .overviewTransactionsTicket.isRow {
    flex-flow: column wrap;
  }

  .homeContentTitle {
    width: 355px;
  }

  .overviewSpendableLockedWrapper {
    padding-top: 0;
    display: flex;
    justify-content: space-between;
    width: 315px;
    padding-left: 9px;
  }

  .tabsWrapper {
    height: 300px;
  }
}

